3.9.07 ()
- Fixed exception on hover for layers without tooltip

3.9.06 (25//05//2014)
- Allowfullscreen parameter added to iframe code
  in share dialog.

3.9.05 (19//05//2014)
- Fixed tileJSON method in cdb.Tiles
- Adds support for Markdown in descriptions

3.9.04 (14//05//2014)
- Added position parameter in Tooltip overlay

3.9.03 (14//05//2014)
- Added tooltip option in createLayer method

3.9.02 (14//05//2014)
- Fixes torque width for small screens

3.9.01 (14//05//2014)
- Fixed regression for mouseover event in layers

3.9.00 (13//05//2014)
- indents HTML of legends
- fixed getSubLayer in core library
- added tooltip loading from viz.json

3.8.11 (28//04/2014)
- adds new link to the visualization in the share dialog.

3.8.10 (21//04/2014)
- fixed problem parsing map viz options when values are not valid
- fixed interaction in IE8
- getCartoCSS and getSQL raise an exception for named maps
- fixed core library
- added url translation for https for cartodb basemaps

3.8.09 (04//04/2014)
- fixed map instanciation when named map has no layer information

3.8.08 (03//04/2014)
- fixed layer visibility

3.8.07 (03//04/2014)
- fixed attribution position for gmaps
- fixed maps api request when all the layers are hidden
- fixed error in gmaps when tile loading raises an error
- fixed panBy on leaflet when torque layers are used

3.8.06 (27//03//2014)
- fixed layer interaction is not disabled when sublayer is hidden

3.8.05 (25//03/2014)
- update torque library
- fixed interaction with naned maps when there is a hidden layer
- added multiple metrics

3.8.04 (20//03//2014)
- prevent the scrolling of the map when the user scrolls the infowindow content.
- enables the scrollwheel when the user enters in the fullscreen model.
- fixes the embed_map url in the share dialog.
- raised leaflet maxZoom from 18 to 30
- fixed setting interactivity in private layers should raise an exception (#108)
- added metrics for tile and layergroup loading time

3.8.03 (15//03//2014)