@@ -1,5 +1,6 @@
 3.9.07 ()
 - Fixed exception on hover for layers without tooltip
+- Improved tooltip interaction
 
 3.9.06 (25//05//2014)
 - Allowfullscreen parameter added to iframe code
